--- a/MyLegacyMaps/Content/mlm/mlm.css
+++ b/MyLegacyMaps/Content/mlm/mlm.css
@@ -114,6 +114,7 @@
     background: rgba(0,0,0,0.2);
     border-radius: 14px;
     padding: 8px;
+    z-index:1000;
 }
 
 #modalContent {
